--- a/app/src/main/res/layout/fragment_covid_data.xml
+++ b/app/src/main/res/layout/fragment_covid_data.xml
@@ -5,21 +5,26 @@
     android:id="@+id/fragment_controller"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   >
+    android:background="#FFFFFF"
+    android:backgroundTint="@color/pHubSideBar">
 
-    <TextView
-        android:id="@+id/text_gallery"
+    <!--    <androidx.cardview.widget.CardView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="280dp"-->
+    <!--        android:layout_margin="10dp"-->
+    <!--        android:backgroundTint="@color/pHubSideBar"/>-->
+
+    <com.github.mikephil.charting.charts.HorizontalBarChart
+        android:id="@+id/stacked_BarChart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:gravity="center_horizontal"
-        android:textAlignment="center"
-        android:textColor="@color/pHubGray"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </com.github.mikephil.charting.charts.HorizontalBarChart>
+
 </FrameLayout>
