--- a/app/src/main/res/layout/fragment_covid_data.xml
+++ b/app/src/main/res/layout/fragment_covid_data.xml
@@ -18,6 +18,7 @@
         android:id="@+id/progressbar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
+        android:layout_gravity="center"
         android:layout_height="423dp" />
 
     <com.github.mikephil.charting.charts.HorizontalBarChart
@@ -37,19 +38,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:text="China" />
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:text="World" />
     </LinearLayout>
 
 </FrameLayout>
